# kodawari-share-cookpad

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: urls.py
config/settings/: base.py  development.py  production.py
core/models/: timestamp.py
djecommerce/settings/: development.py
ecommerce/: admin.py  forms.py  models.py  urls.py  views.py
ecommerce/management/commands/: rename.py
ecommerce/migrations/: 0001_initial.py  0002_initial.py  0003_category_shop_remove_item_label_remove_item_slug_and_more.py  0003_userprofile.py  0004_item_shop.py  0005_shop_business_hour.py  0006_alter_item_price.py
ecommerce/templatetags/: cart_template_tags.py
myaccount/: admin.py  models.py
myaccount/migrations/: 0001_initial.py
templates/: footer.html  home.html  navbar.html  order_snippet.html  order_summary.html  product.html
